change fonts, fix layout issues, reduce total height

--- a/francais/style.css
+++ b/francais/style.css
@@ -30,6 +30,7 @@ li {
 }
 code {
   font-family: monospace, courier new, monospace;
+  font-size: 0.833em !important;
   color: #000;
   background-color: #f5f5f5;
   padding: 2px 9px; 
@@ -58,13 +59,16 @@ body {
 	display: flex;
 	height: 100vh;
 }
+h2 {
+    font-family: "Spectral SC";
+}
 h3 {
 	font-size: 1.25em;
-	font-weight: 600;
+	font-weight: 800;
 }
 form {
 	margin: auto;
-	padding: 1.5em 0;
+	padding: 0.5em 0;
 	width: calc(100% - 3em);
 	max-width: 36em;
 }
@@ -94,9 +98,9 @@ form {
 	box-shadow: 0 0 0 1px hsl(133,90%,20%) inset;
 }
 .btn-lg {
-	font-size: 1em;
+	font-size: 1.2em;
 	line-height: 1.5;
-	padding: 0.75em 1.5em;
+	padding: 0.63em 1.5em;
 	width: 100%;
 }
 .grid {
